--- a/templates/login.html
+++ b/templates/login.html
@@ -74,7 +74,7 @@
     </style>
 </head>
 <body>
-    <form class="login-card" method="post">
+    <form class="login-card" method="POST">
         <h2>IEEE ExCom Login</h2>
         <input type="text" name="username" placeholder="Username" required autofocus>
         <input type="password" name="password" placeholder="Password" required>
